<resources>
    <string name="start_datenotset">Please set start date first.</string>
<string name="sending_rqst">Initiating request.....</string>
<string name="success_sending_rqst">Request sent successfully.</string>
<string name="failed_sending_rqst">Failed to send your request.</string>
<string name="sending_invtsn">Initiating invitation...</string>
<string name="failed_sending_nvtsn">Failed to send your invitation request.</string>
<string name="refreshing">Refreshing your view...</string>
<string name="request_reset_pass">Requesting to change password</string>
<string name="success_reset_pass">Password reset successfully  and sent to your email id.</string>
<string name="failed_reset_pass">Failed to reset your password.</string>
<string name="welcome_txt"><b>Invite : </b>Please invite your partner to share your personal data. \n\n<b><center>OR</center></b>\n\n<b>Request : </b>Please request your partner to share her personal data.</string>
<string name="sign_up">Sign Up</string>
<string name="confirm_password_hint">confirm password</string>
<string name="first_name_hint">first name</string>
<string name="last_name_hint">last name</string>
<string name="sign_up_btn">SIGN UP</string>
<string name="p_name_hnt">partner name</string>
<string name="update_fail">Unable to update! Try again .</string>
<string name="update_successfull">You have successfully updated your profile.</string>
<string name="sharing_stng">Sharing Settings</string>
<string name="partner_stng">Settings</string>
<string name="shr_period">Period Logs</string>
<string name="shr_mood">Moods</string>
<string name="shr_symptoms">Symptoms</string>
<string name="shr_pill">Pills</string>
<string name="shr_note">Notes </string>
<string name="shr_period_des">Share your period logs.</string>
<string name="shr_mood_des">Tap to start/stop sharing your moods.</string>
<string name="shr_symptoms_des">Tap to start/stop sharing your symptoms.</string>
<string name="shr_pill_des">Tap to start/stop sharing your pills information.</string>
<string name="shr_note_des">Tap to start/stop sharing your note information.</string>
<string name="shr_notify">Notifications</string>
<string name="shr_syncdata">Synch Data</string>
<string name="shr_updateprof">Update Profile</string>
<string name="shr_removepartner">Remove Partner</string>
<string name="shr_changepass">Change Password</string>
<string name="shr_logout">Signout</string>
<string name="shr_notify_des">Tap to start/stop Notifications.</string>
<string name="shr_syncdata_des">Tap to synch data with server.</string>
<string name="shr_updateprof_des">Tap to update your profile.</string>
<string name="shr_removepartner_des">Tap to remove partner</string>
<string name="shr_cancelpartner_des">Tap to cancel the Invitation/Request</string>
<string name="shr_changepass_des">Tap to change your profile password.</string>
<string name="shr_logout_des">Tap to Signout from Application.</string>
<string name="forgot_pass">Forgot Pasword</string>
<string name="req_for_sharing">Request for Sharing</string>
<string name="req_to_invite">Invite Partner</string>
<string name="invite">Invite</string>
<string name="request">Request</string>
<string name="same_email">You can\'t add your self!</string>
<string name="auth_fail">Authentication failed!</string>
<string name="create_acc">Create Account</string>
<string name="no_data_connection">Data connection not available!</string>
<string name="signin_msg">Sign in to your account</string>
<string name="email_hint">email</string>
<string name="password_hint">password</string>
<string name="agreement_0">I agree to the MPT </string>
<string name="agreement_1">terms </string>
<string name="agreement_2">and </string>
<string name="agreement_3">conditions </string>
<string name="agreement_4">I accept </string>
<string name="agreement_5">terms of service </string>
<string name="agreement_6">privacy policy</string>
<string name="registration_success">Congrats!! You have registered successfully!</string>
<string name="provide_input">Please provide input.</string>
<string name="accept_terms">Please accept all terms and conditions.</string>
<string name="no_notes">No notes</string>
<string name="no_sym">No symptoms</string>
<string name="no_mood">No moods</string>
<string name="no_pills">No pills</string>
<string name="timeline_title">Timeline</string>
<string name="today_title">Today</string>
<string name="setting_title">Settings</string>
<string name="add_sym">Add Symptoms</string>
<string name="add_mood">Add Moods</string>
<string name="addnote">Add Notes</string>
<string name="addnote_new">My Notes</string>
<string name="conditions">I accept terms of service and privacy policy</string>
<string name="login_msg">Please wait while login ...</string>
<string name="app_id">747022272021935</string>
<string name="sign_in">SIGN IN</string>
<string name="partner_home">My Partner</string>
<string name="my_home">My Period Tracker</string>
<string name="partner_title">Partner</string>
<string name="calender_title">Calender</string>
<string name="green_theme">Green Theme</string>
<string name="blue_theme">Blue Theme</string>
 <string name="blue2_theme">Blue2 Theme</string>
<string name="app_name">MyPeriod Tracker</string>
<string name="calender">Calendar</string>
<string name="show_tip">Show Tip of the day</string>
<string name="des_tip">Enable /Disable Tip of the day.</string>
<string name="default_theme">Default Theme</string>
<string name="tip_widget_heading">Widget</string>
<string name="tip_widget_msg">You can setup the app widget on device dashboard with password lock feature.</string>
<string name="tip_regional_setting_heading">Regional Settings </string>
<string name="tip_regional_setting_msg">You can setup the regional settings like metrices,  date format,  language etc. from settings section of the app. Would you like to setup now ?</string>
<string name="tip_translation_heading"> Translation </string>
<string name="tip_translation_msg"> If you find any issue in translation, you can send us the updated / correct translation. Would you like to send the updates now ?</string>
<string name="tip_language_heading"> Language</string>
<string name="tip_language_msg">  If you find your language not supported by the app,  you can contribute by translating the app.</string>
<string name="tip_timeline_heading">Timeline </string>
<string name="tip_timeline_msg"> You can use the timeline feature to view all your records in chronological order. Would you like to view?</string>
<string name="tip_buy_heading">Ads Free</string>
<string name="tip_buy_msg">You can personalize your app by making it ads free. Would you like to buy the app ?</string>
<string name="tip_appico_heading"> Change App Icon </string>
<string name="tip_appico_msg"> You can change  APP icon on dashboard. Would you like to change the app icon now?</string>
<string name="tip_notification_heading"> Notifications </string>
<string name="tip_notification_msg"> You can setup the Period start,  Fertile days,  Ovulation day and Notification frequency/alerts from the app settings. Would you like to setup now?</string>
<string name="tip_pils_heading"> Pills </string>
<string name="tip_pils_msg">  You can add the pills record for each day. Would you like to add pills?</string>
<string name="tip_passcode_heading"> Passcode Protection </string>
<string name="tip_passcode_msg"> You can set the app passcode to protect your privacy. Would you like to set the passcode now?</string>
<string name="fbmessage">We respect your privacy and this app will not post on Facebook ever.  This option helps you to quickly  connect with your partner using your email.</string>
<string name="Requestmessage"><b>Request: </b>Request your partner to share her personal data.</string>
<string name="Invitemessage"><b>Invite: </b>Invite your partner to share her personal data.</string>
<string name="Requestdetails">Request - Your partner to share.</string>
<string name="Invitedetails">Invite - Share your period data.</string>
<string name="timeline">Timeline</string>
<string name="seeinfo">Tap to see app info</string>
<string name="helpus">Help Us</string>
<string name="suggestion_txt">If you find any mistakes in our translation,  please suggest us.</string>
<string name="help_localize_txt">If you don\'t find your native language in our Application and would like to help us to add, please contact us.</string>
<string name="give_suggestion">Give suggestions</string>
<string name="hlp_localize">Help to localize</string>
<string name="share_via">Share Via Email</string>
<string name="help_localize">Help us localize</string>
<string name="acknowledge">Acknowledements</string>
<string name="incorrect">To be correct</string>
<string name="correct">Correct</string>
<string name="incourrect_hint">Input incorrect translations or app features.</string>
<string name="correct_hint">Input correct translations or app features.</string>
<string name="add_more">Add More</string>
<string name="timeline_addnote">Add Note</string>
<string name="email_address">linchpin.health@gmail.com</string>
<string name="correctioon_sub">MPT Correction</string>
<string name="email_chooser">Send E-Mail</string>
<string name="localize_mail_sub">Translation Help</string>
<string name="widget_pass_hint">Password to Unlock</string>
<string name="localize_mail_body">I would like to help you translate My Period Tracker. Please contact me.</string>
<string name="helps_us_summery">To correct translation and localiztion.</string>
<string name="theme">Theme</string>
<string name="set_theme">Tap to change default theme.</string>
<string name="ovulation">Ovulation Day</string>
<string name="period_start">First Day of Period</string>
<string name="period_end">Last day of Period</string>
<string name="period">Day of Period</string>
<string name="fertility">Fertile Day</string>
<string name="fertility_end">Last day of Fertility</string>
<string name="fertility_start">First day of Fertility</string>
<string name="newd">New</string>
<string name="setdaysofweek">Set First Day of week</string>
<string name="changedayofweekbelow">Tap to change start day of week</string>
<string name="sunday">Sunday</string>
<string name="monday">Monday</string>
<string name="saturady">Saturday</string>
<string name="app_nameMPT">MPT</string>
<string name="app_newname">My Tracker</string>
<string name="app_iconandname">App Icon and Name</string>
<string name="select_app_iconandname">Choose App Icon and Name</string>
<string name="changeappiconandname">Tap to change app icon</string>
<string name="periodstartnotificationmessage">Period expected to start in </string>
<string name="fertilestartnotificationmessage">Fertility expected to start in </string>
<string name="PregnancyNotificationMessage">You are expected to be Pregnant from. </string>
<string name="ovulationstartnotificationmessage">Ovulation expected to start in </string>
<string name="periodstartnotificationmessagefrom">Period expected to start from </string>
<string name="fertilestartnotificationmessagefrom">Fertility expected to start from </string>
<string name="ovulationstartnotificationmessagefrom">Ovulation expected to start from </string>
<string name="notificationdays"> days</string>
<string name="messageonclearpasscode">Please enter current app passcode for removing app passcode.</string>
<string name="goal_message">Choose your Purpose</string>
<string name="menstrual_calendar">Menstrual Calendar</string>
<string name="menstrual_calendar_details">I simply want to track my periods and stay healthier !</string>
<string name="trying_to_conceive">Trying To Conceive</string>
<string name="trying_to_conceive_details">Get pregnant and stay healthier !</string>
<string name="start_sharing_data">Login/Signup To Start Sharing Data with your Partner</string>
<string name="start_sharing_data_details">Hint : Female Users - setup your app and then invite your male partners here ! Male Users - Begin here ! </string>
</resources>