<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.linchpin.myperiodtracker"
    android:layout_width="match_parent"
    android:id="@+id/content"
    android:layout_height="match_parent"
    android:background="@drawable/mpt_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/textviewselector"
        android:orientation="vertical" >

        <com.linchpin.periodtracker.widget.BackBar
            android:id="@+id/back_pan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:text="@string/helpus"
            custom:backbarbackground="@drawable/backbuttonselctor" >
        </com.linchpin.periodtracker.widget.BackBar>
       

        <com.linchpin.periodtracker.widget.Header
            android:id="@+id/infoheader"
            style="@style/MyDefaultTextAppearance"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/give_suggestion" />
      

        <TextView
            android:id="@+id/suggestation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/suggestion_txt"
            android:textColor="@color/default_timeline_fg" />

        <Button
            android:id="@+id/suggestation_btn"
            style="@style/MptButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@color/share_button_bg"
            android:text="@string/share_via" />

        <com.linchpin.periodtracker.widget.Header
            android:id="@+id/infoheader"
            style="@style/MyDefaultTextAppearance"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/hlp_localize" />
      

        <TextView
            android:id="@+id/localize_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/help_localize_txt"
            android:textColor="@color/default_timeline_fg" />

        <Button
            android:id="@+id/localize_btn"
            style="@style/MptButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/share_button_bg"
            android:text="@string/share_via" />

        <TextView
            android:id="@+id/acknoledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:gravity="center"
            android:text="@string/acknowledge"
            android:textColor="@color/default_timeline_fg"
            android:textSize="@dimen/default_heading_text_size"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/ack_lst"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="15dip"
            android:cacheColorHint="#0000"
            android:divider="@null" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlbottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    </LinearLayout>

</RelativeLayout>